<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tumpaca</string>
    <string name="app_name_debug">Tumpaca🐞</string>
    <string name="auth_start">Get started</string>
    <string name="comment_input_hint">Comment</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_loading">Loading dashboard…</string>
    <string name="dashboard_logout">Log out</string>
    <string name="like">Liking…</string>
    <string name="unlike">Unliking…</string>
    <string name="liked_result">Liked</string>
    <string name="logout">Log out</string>
    <string name="reblog_dialog_header">Reblog</string>
    <string name="reblog">Reblogging…</string>
    <string name="reblogged_result">Reblogged</string>
    <string name="reload">Reload dashboard</string>
    <string name="ensure_logout">Are you sure you want to log out?</string>
    <string name="tumpaca">Tumpaca</string>
    <string name="unliked_result">Unliked</string>
    <string name="copyright">Copyright © benkyokai. All rights reserved.</string>
    <string name="offline_toast">Network unavailable</string>
    <string name="notes_unknown_placeholder">\? notes</string>
    <string name="exclude_my_posts">Hide my posts</string>
    <string name="exclude_photo">Hide PHOTO posts</string>
    <string name="high_resolution_photo">Show hi-res photos</string>
    <string name="view_license">License</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="error_reblog">Reblog failed</string>
    <string name="error_like">Like failed</string>

    <string name="note_one">%d note</string>
    <string name="note_other">%d notes</string>

    <string translatable="false" name="version_name">Version %1$s</string>

    <!-- 以下の ID はテスト用のダミー -->
    <string translatable="false" name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <!-- 以下の ID は NativeAd テスト用のダミー -->
    <string translatable="false" name="adpost_ad_unit_id">ca-app-pub-5569142544566797/6481951063</string>

    <string translatable="false" name="settings_banner_unit_id">ca-app-pub-5569142544566797/4695553061</string>
    <string name="cant_access_storage">Couldn’t access external storage</string>
    <string name="download_image">Downloading…</string>
    <string name="save_image">Save this image?</string>
</resources>
