<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/tumpaca" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tumpaca"
            android:textColor="@color/text_button"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/copyright"
            android:textColor="@color/text_button"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reload"
            android:textColor="@color/text_button"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/exclude_my_posts"
            android:text="@string/exclude_my_posts"
            android:textColor="@color/text_button"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="24dp" />

        <Switch
            android:id="@+id/exclude_photo"
            android:text="@string/exclude_photo"
            android:textColor="@color/text_button"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="24dp" />

        <Switch
            android:id="@+id/high_resolution_photo"
            android:text="@string/high_resolution_photo"
            android:textColor="@color/text_button"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchPadding="24dp" />

        <TextView
            android:id="@+id/viewLicense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/view_license"
            android:textColor="@color/text_button"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            android:textColor="@color/text_button"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>

